[gd_scene load_steps=15 format=3 uid="uid://cslk0aajw4nlu"]

[ext_resource type="Script" uid="uid://cyfvtf67yrwh4" path="res://scenes/dino/dino.gd" id="1_xtykj"]
[ext_resource type="Texture2D" uid="uid://c1kdx4s6g1rs" path="res://assets/graphics/dinos/DinoSprites - mort.png" id="2_xtykj"]
[ext_resource type="Texture2D" uid="uid://dss0brsxfow1r" path="res://assets/graphics/dinos/shadow_2.png" id="3_nddxa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xtykj"]
size = Vector2(80, 125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cm5t2"]
size = Vector2(87, 103)

[sub_resource type="Animation" id="Animation_cm5t2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mkokt"]
resource_name = "die"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.40635255, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 15, 15, 16, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_2p14s"]
resource_name = "duck"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.20000002, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_vgqyr"]
resource_name = "hit"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.70000005),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 15, 16, 12, 10]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_hit_animation_end"
}]
}

[sub_resource type="Animation" id="Animation_xtykj"]
resource_name = "idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_klvqn"]
resource_name = "jump"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5982368, 0.7, 0.8, 0.90000004),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 1, 3, 3, 1, 2, 0]
}

[sub_resource type="Animation" id="Animation_uajt7"]
resource_name = "run"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_nddxa"]
resource_name = "wait_restart"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cm5t2"]
_data = {
&"RESET": SubResource("Animation_cm5t2"),
&"die": SubResource("Animation_mkokt"),
&"duck": SubResource("Animation_2p14s"),
&"hit": SubResource("Animation_vgqyr"),
&"idle": SubResource("Animation_xtykj"),
&"jump": SubResource("Animation_klvqn"),
&"run": SubResource("Animation_uajt7"),
&"wait_restart": SubResource("Animation_nddxa")
}

[node name="Dino" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 29
script = ExtResource("1_xtykj")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
position = Vector2(-95, -160)
scale = Vector2(8, 8)
texture = ExtResource("2_xtykj")
centered = false
hframes = 24

[node name="CollisionShapeRun" type="CollisionShape2D" parent="."]
position = Vector2(-7, -64.5)
shape = SubResource("RectangleShape2D_xtykj")

[node name="CollisionShapeDuck" type="CollisionShape2D" parent="."]
position = Vector2(-3.5, -53.5)
shape = SubResource("RectangleShape2D_cm5t2")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cm5t2")
}
autoplay = "idle"

[node name="Shadow" type="Node2D" parent="."]
scale = Vector2(6, 6)

[node name="ShadowSprite" type="Sprite2D" parent="Shadow"]
unique_name_in_owner = true
texture_filter = 2
texture = ExtResource("3_nddxa")

[node name="RayShadow" type="RayCast2D" parent="Shadow"]
unique_name_in_owner = true
target_position = Vector2(0, 100)
hit_from_inside = true
